# pytorch-choice-models

./: .gitignore  README.md  pyproject.toml
src/discrete_choice/: heteroskedastic_logit.py  mnl.py  multinomial_logit.py
src/layers/: __init__.py  bellman_ford.py  copy_to_edges.py  edge_prob.py  exp_linear_eqs.py  exp_value_iteration.py  fixed_point_solve.py  value_iteration_solve.py
src/route_choice/: recursive_logit.py  utils.py  vis.py
src/route_choice/data/: __init__.py  dataset.py  osm.py  tutorial.py  utils.py
src/route_choice/layers/: __init__.py
tests/: conftest.py  test_bellman_ford_gnn.py  test_copy_to_edges.py  test_heteroskedastic_logit.py  test_mnl.py  test_multigraph_sp.py  test_recursive_logit.py  test_small_network.py  test_solve_bellman_eq.py  test_turn_angles.py
tests/fixtures/: __init__.py  discrete_choice.py  route_choice.py
