[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-choice-models"
version = "0.0.0"  # Placeholder, will be overridden by setuptools-scm
authors = [
    {name = "Ben Hudson", email = "benhudson@fastmail.com"}
]
license = {file = "LICENSE"}
dependencies = [
    "matplotlib",
    "networkx",
    "numpy",
    "osmnx",
    "pytest-cov",
    "pytest",
    "scikit-learn",
    "statsmodels",
    "torch_geometric",
    "torch",
    "torchdeq",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
